--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
-    <title>CrystalCollectors</title>
-</head>
-<body>
+<head>
     
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Indie+Flower|Luckiest+Guy|Monoton|Sigmar+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <title>CrystalCollectors</title>
+    <style>
+        body {
+            background-image: url('assets/images/bkgrnd.gif')
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class=" well well-lg text-center title ">
+            <h1 style="font-family: 'Bungee Inline', cursive; font-size:100px; color:deeppink">Crystal Collector</h1>
+        </div>
+        <!--  creates the instructions  -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    <h2 style="font-family: 'Luckiest Guy', cursive; background-color: paleturquoise; padding: 20px; width: 22%">Instructions</h2>
+                </div>
+            </div>
+
+            <div class="panel-body" style="font-size:25px;font-family: 'Indie Flower', cursive; padding: 0px; padding: 30px; background-color: lightpink">
+                You will be given a random number at the start of the game. There are four crystals below. By clicking on a crystal, you
+                will add a specific amount of points to your total score. You win the game by matching your total score to
+                the random number. You lose the game if your total score goes above the random number. The value of each
+                crystal is hidden from you until you click on it. Each time when the game starts, the game will change the
+                values of each crystal.
+
+            </div>
+        </div>
+
+        <div class="panel panel-default" id="panelStyle">
+            <div class="panel-body" style="background-color:white">
+                <img src="assets/images/jewel3.png" style="width:150px; height:150px; margin-left: 150px" id="j1">
+                <img src="assets/images/jewel2.jpg" style="width:150px; height:150px; margin-left: 40px" id="j2">
+                <img src="assets/images/jewel1.png" style="width:150px; height:150px; margin-left: 50px" id="j3">
+                <img src="assets/images/jewel4.png" style="width:150px; height:150px; margin-left: 50px" id="j4">
+            </div>
+        </div>
+        <div class="panel panel-default alert-info" id="panelStyle" style="font-size:30px;font-family: 'Sigmar One', cursive; padding: 30px; padding: 30px">
+            <div class="panel-body">
+                <h4 id="firstbox">Number to match: <span id="target"></span></h4>
+                <h4 id="secondbox">Your number: <span id="Current"></span></h4>
+            </div>
+        </div>
+        <div class="panel panel-default" id="panelStyle">
+            <div class="panel-body alert-danger">
+                <h4>
+                    <div class="row">
+                        <div class="col-5" style="font-size:30px;font-family: 'Sigmar One', cursive; padding: 30px; margin-left: 350px">
+                            Wins: <span id="Wins"></span>
+                            Losses: <span id="Losses"></span>
+
+                        </div>
+                    </div>
+
+                </h4>
+            </div>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="assets/javascript/game.js"></script>
 </body>
+
 </html>
